[metadata]
name = tanhuma
version = 0.1
description = Django webapp for the Tanhuma project
long_description = file: README.md
url = https://
author = Benjamin Schnabel
author_email = benjamin.schnabel@gmx.net
license = MIT-License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0.2
    Intended Audience :: Users
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.1
install_requires =
    Django >= 5.0.2
